trying to fix warnings

--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,7 @@
     linkcolor=blue,
     filecolor=magenta,      
     urlcolor=cyan,
+    pageanchor=false
 }
 \urlstyle{same}
 \interfootnotelinepenalty=10000
@@ -26,22 +27,12 @@
 \newtheorem{example}{Example}
 \newtheorem{remark}{Remark}
 
-%\newenvironment{proof}[1][Proof]{\begin{trivlist}
-%\item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
-%\newenvironment{definition}[1][Definition]{\begin{trivlist}
-%\item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
-%\newenvironment{example}[1][Example]{\begin{trivlist}
-%\item[\hskip \labelsep {\bfseries #1:}]}{\end{trivlist}}
-% \newenvironment{remark}[1][Remark]{\begin{trivlist}
-% \item[\hskip \labelsep {\bfseries #1}]}{\end{trivlist}}
-
 \newcommand{\lag}{\mathcal{L}}
 \newcommand{\im}{\mathrm{i}}
 \newcommand{\e}{\mathrm{e}}
 \newcommand{\eulerlagrange}[1]{\frac{\partial \lag}{\partial #1} = \partial_\mu \bigg(\frac{\partial \lag}{\partial(\partial_\mu #1 )}\bigg)}
 \DeclareMathOperator{\supp}{supp}
 \DeclareMathOperator{\cl}{cl}
-
 
 
 
@@ -206,6 +197,4 @@ And finally, to my parents, Charlie, and Diane who provided unwavering support a
 \bibliography{refs}
 
 
-
 \end{document}
-
