--- a/main.tex
+++ b/main.tex
@@ -165,13 +165,12 @@
 I would like to dedicate this thesis to my dog, Jett.
 
 \chapter*{Acknowledgements}
-I would like to thank, first and foremost, Dr.\ Luciano M. Medina, the advisor
-for this work, for his continued support throughout this research and thesis
-writing process. Without his willingness to give so much time and effort to his
-students, I would not have learned as much as I did. His continued insight
-pushed my understanding and his generous supervision allowed me to take the
-research in directions I wished. For his generous nature I am extremely
-appreciative.
+I would like to thank, Dr.\ Luciano M. Medina, the advisor for this work, for
+his continued support throughout this research and thesis writing process.
+Without his willingness to give so much time and effort to his students, I
+would not have learned as much as I did. His continued insight pushed my
+understanding and his generous supervision allowed me to take the research in
+directions I wished. For his generous nature I am extremely appreciative.
 
 I would also like to thank Professor Joe Esposito who so kindly extended his
 time to help build the foundations of the work presented here. Even in the midst
