--- a/main.tex
+++ b/main.tex
@@ -69,7 +69,7 @@
 
     \textbf{Degree of} \\ \vspace{0.75cm}
 
-    \textbf{BACHELOR OF SCIENCE IN PHYSICS AND MATHEMATICS}\\ \vspace{0.75cm}
+    \textbf{BACHELOR OF SCIENCE IN MATHEMATICS AND PHYSICS}\\ \vspace{0.75cm}
 
     \textbf{at} \\ \vspace{0.5cm}
 
@@ -98,7 +98,7 @@
 
     \> \\
 
-    \underline{Major}: Physics and Mathematics \\
+    \underline{Major}: Mathematics and Physics \\
 
     \> \\
     \> \\
@@ -131,7 +131,7 @@
 
     {Submitted in Partial Fulfillment of the Requirements} \\ \vspace{0.5cm}
 
-    {for the Degree of Bachelor of Science (Physics and Mathematics)} \\ \vspace{1.cm}
+    {for the Degree of Bachelor of Science (Mathematics and Physics)} \\ \vspace{1.cm}
 
     {May 2017} \\ \vspace{0.5cm}
 
